--- a/pom.xml
+++ b/pom.xml
@@ -34,17 +34,10 @@
 	    <version>2.8.4</version>
 	</dependency>
 	<dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-annotations</artifactId>
-	    <version>2.8.4</version>
-	</dependency>
-	<dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-databind</artifactId>
-	    <version>2.8.4</version>
-	</dependency>
-	
-		
+	  <groupId>com.fasterxml.jackson.datatype</groupId>
+	  <artifactId>jackson-datatype-joda</artifactId>
+	  <version>2.4.0</version>
+	</dependency>  
 	
 	<!-- TESTS -->
 	<dependency>
