--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
 	  <version>3.4.2</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-client -->
+	<dependency>
+	    <groupId>org.jboss.resteasy</groupId>
+	    <artifactId>resteasy-client</artifactId>
+	    <version>3.0.19.Final</version>
+	</dependency>
+	
+	
 	<!-- DI -->
 	<dependency>
 	    <groupId>com.google.inject</groupId>
@@ -34,9 +42,9 @@
 	    <version>2.8.4</version>
 	</dependency>
 	<dependency>
-	  <groupId>com.fasterxml.jackson.datatype</groupId>
-	  <artifactId>jackson-datatype-joda</artifactId>
-	  <version>2.4.0</version>
+		<groupId>com.fasterxml.jackson.datatype</groupId>
+		<artifactId>jackson-datatype-joda</artifactId>
+		<version>2.4.0</version>
 	</dependency>  
 	
 	<!-- TESTS -->
@@ -47,6 +55,12 @@
 	    <scope>test</scope>
 	</dependency>
 	
-		
+	<!-- SPICINESS -->
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.16.10</version>
+		<scope>provided</scope>
+	</dependency>
   </dependencies>
 </project>
